change logic with refresh token, small fix Not Found
