# src/controllers/user.controllers/login.controller.js
@@ -1,7 +1,7 @@
-const { UserService } = require('../../services');
-const { isErrorOrFalsyValue, responseWithError } = require('../../helpers');
-const { cookieOptions } = require('../../config');
-const { UserDTO } = require('../../DTO');
+const { UserService } = require("../../services");
+const { isErrorOrFalsyValue, responseWithError } = require("../../helpers");
+// const { cookieOptions } = require('../../config');
+const { UserDTO } = require("../../DTO");
 
 const login = async (req, res, next) => {
   const { user, tokens } = await UserService.login(req.body);
@@ -11,14 +11,13 @@ const login = async (req, res, next) => {
   }
 
   const userData = UserDTO.getUserSimpleInfo({ user });
-  const { refreshToken, accessToken } = tokens;
 
-  res.cookie('refreshToken', refreshToken, cookieOptions);
+  // res.cookie('refreshToken', refreshToken, cookieOptions);
   res.status(200).json({
-    message: 'success',
+    message: "success",
     data: {
       ...userData,
-      accessToken,
+      ...tokens,
     },
   });
 };
